example fully functional

--- a/aws-examples/s3-webcache-example/pom.xml
+++ b/aws-examples/s3-webcache-example/pom.xml
@@ -5,23 +5,61 @@
 	<packaging>war</packaging>
 	<name>AWS S3 WebCache Example</name>
 	<url>http://maven.apache.org</url>
-
+	
 	<parent>
 		<groupId>br.com.dynamicflow.aws</groupId>
 		<artifactId>aws-examples</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>br.com.dynamicflow.aws</groupId>
+			<artifactId>s3-webcache-utils</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 	
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<version>6.1.26</version>
+				<configuration>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<stopKey>foo</stopKey>
+					<stopPort>9999</stopPort>
+				</configuration>
+				<executions>
+					<execution>
+						<id>start-jetty</id>
+						<phase>pre-integration-test</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<scanIntervalSeconds>0</scanIntervalSeconds>
+							<daemon>true</daemon>
+						</configuration>
+					</execution>
+					<execution>
+						<id>stop-jetty</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>stop</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>br.com.dynamicflow.aws</groupId>
 				<artifactId>s3-webcache-maven-plugin</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
 				<configuration>
-					<accessKey>AKIAJTQAWEXYFGAGKS4Q</accessKey>
-					<secretKey>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</secretKey>
-					<bucketName>data.fs.dynamicflow</bucketName>
+					<accessKey>${aws.accessKey}</accessKey>
+					<secretKey>${aws.secretKey}</secretKey>
+					<bucketName>${aws.bucketName}</bucketName>
 					<includes>
 						<include>**/*.gif</include>
 						<include>**/*.jpg</include>
