--- a/aws-plugins/s3-webcache-maven-plugin/pom.xml
+++ b/aws-plugins/s3-webcache-maven-plugin/pom.xml
@@ -14,6 +14,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>br.com.dynamicflow.aws</groupId>
+			<artifactId>s3-webcache-utils</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
 			<artifactId>maven-plugin-tools-api</artifactId>
 		</dependency>
