--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>3.0.1</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.maven.plugin-tools</groupId>
 				<artifactId>maven-plugin-tools-api</artifactId>
 				<version>3.1</version>
@@ -49,6 +54,7 @@
 	</dependencyManagement>
 
 	<modules>
+		<module>aws-utils</module>
 		<module>aws-plugins</module>
 		<module>aws-examples</module>
 	</modules>
