--- a/aws-utils/s3-webcache-utils/pom.xml
+++ b/aws-utils/s3-webcache-utils/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>br.com.dynamicflow.aws</groupId>
 		<artifactId>aws-utils</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
