correct project encoding

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
 	</organization>
 	<inceptionYear>2012</inceptionYear>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<distributionManagement>
 	     <repository>
 	         <id>dynamicflow-release</id>
