support for multiple digest algorithms
support for multiple digest algorithms such as: md5, sha1, sha256,
sha384 and sha512.

The default digest algorithm changed from sha256 to md5.

--- a/aws-examples/s3-webcache-example/pom.xml
+++ b/aws-examples/s3-webcache-example/pom.xml
@@ -39,6 +39,7 @@
 					<accessKey>${aws.accessKey}</accessKey>
 					<secretKey>${aws.secretKey}</secretKey>
 					<bucketName>${aws.bucketName}</bucketName>
+					<digestType>md5</digestType>
 					<includes>
 						<include>**/*.gif</include>
 						<include>**/*.jpg</include>
