--- a/aws-plugins/s3-webcache-maven-plugin/pom.xml
+++ b/aws-plugins/s3-webcache-maven-plugin/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>br.com.dynamicflow.aws</groupId>
 		<artifactId>aws-plugins</artifactId>
-		<version>0.0.3-SNAPSHOT</version>
+		<version>0.0.3</version>
 	</parent>
 
 	<dependencies>
