--- a/aws-examples/pom.xml
+++ b/aws-examples/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>br.com.dynamicflow.aws</groupId>
 		<artifactId>aws-parent</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<artifactId>aws-examples</artifactId>
 	<packaging>pom</packaging>
